--- a/tutos/layouts/_default/single.html
+++ b/tutos/layouts/_default/single.html
@@ -3,9 +3,6 @@
     <header class="post-header">
       <h1 class="title">{{ .Title }}</h1>
       <div class="meta">
-        <time class="pub-time"  datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">
-          {{ .Lastmod.Format ( .Site.Params.dateformat | default "2006.01.02") }}
-        </time>
         <div class="terms">
           {{ if .Params.categories }}
           <div class="categories">
@@ -37,12 +34,12 @@
         <ul class="pagenation-list">
           {{ if .PrevInSection }}
           <li class="pager previous">
-            <a href="{{ .PrevInSection.Permalink }}" data-toggle="tooltip" data-placement="top" title="{{ .PrevInSection.Title }}">&larr; Previous Post</a>
+            <a href="{{ .PrevInSection.Permalink }}" data-toggle="tooltip" data-placement="top" title="{{ .PrevInSection.Title }}">&larr; Article Précédent</a>
           </li>
           {{ end }}
           {{ if .NextInSection }}
           <li class="pager next">
-            <a href="{{ .NextInSection.Permalink }}" data-toggle="tooltip" data-placement="top" title="{{ .NextInSection.Title }}">Next Post &rarr;</a>
+            <a href="{{ .NextInSection.Permalink }}" data-toggle="tooltip" data-placement="top" title="{{ .NextInSection.Title }}">Article Suivant &rarr;</a>
           </li>
           {{ end }}
         </ul>
